@@ -1,3 +1,9 @@
+2007-09-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* src/hildon-code-dialog-private.h:
+	* src/hildon-code-dialog.c: Adding a patch by Tomas Junnonen to fix the
+	kw keyboard support in HildonCodeDialog.
+
 2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	[1.0.14-1 release]
